Installation package name and application name moved to a properties file. Use it in generic, linux and windows installers.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3373 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/ant-build-config.properties
+++ b/resources/install/ant-build-config.properties
@@ -1,2 +1,4 @@
 application.name=SIP Communicator
+application.web=http://sip-communicator.org/
+application.email=sc@sip-communicator.org
 package.name=sip-communicator
