--- a/resources/install/windows/7zip.conf
+++ b/resources/install/windows/7zip.conf
@@ -1,5 +1,5 @@
 ;!@Install@!UTF-8!
-Title="SIP Communicator Installation"
+Title="@APP_NAME@ Installation"
 BeginPrompt="Do you want to install this software?"
 ExecuteFile="setup-sip-communicator.exe"
 ;!@InstallEnd@!
