comment setup exe building
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3374 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -258,7 +258,7 @@
         <zip destfile="${windows.app.dir}/${package.name}-${sip-communicator.version}-windows.zip"
                 basedir="${windows.app.dir}/tmp"/>
 
-        <exec dir="${windows.app.dir}/tmp" executable="${7zip.executable}" failifexecutionfails="false">
+        <!--exec dir="${windows.app.dir}/tmp" executable="${7zip.executable}" failifexecutionfails="false">
             <arg line="a -y data.7z *"/>
         </exec>
 
@@ -279,7 +279,7 @@
             <fileset dir="${windows.app.dir}/tmp">
                 <include name="data.7z"/>
             </fileset>
-      </concat>
+      </concat-->
 
         <!-- Delete the temp directory-->
         <delete dir="${windows.app.dir}/tmp"/>
