Fix plugin manager plugin.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3385 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1343,6 +1343,8 @@ javax.swing.event, javax.swing.border"/>
                 prefix="net/java/sip/communicator/plugin/pluginmanager"/>
             <zipfileset dir="${resources}/colors"
                 prefix="resources/colors"/>
+            <zipfileset dir="${resources}/images/plugin/pluginmanager"
+                prefix="resources/images/plugin/pluginmanager"/>
         </jar>
     </target>
 
