Removed some unnecessary ':'
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3390 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/plugin/sipaccregwizz/resources.properties
+++ b/src/net/java/sip/communicator/plugin/sipaccregwizz/resources.properties
@@ -1,7 +1,7 @@
 protocolName=SIP
 protocolDescription=The SIP protocol
-uin=SIP id:
-password=Password:
+uin=SIP id
+password=Password
 rememberPassword=Remember password
 uinAndPassword=ID and Password
 advancedOptions=Advanced Options
