--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -36,7 +36,10 @@ org.osgi.framework.system.packages= org.osgi.framework; ; version=1.3.0, \
  org.jdesktop.jdic.tray; \
  org.jdesktop.jdic.desktop; \
  com.apple.eio; \
- org.xml.sax.helpers;
+ org.xml.sax.helpers; \
+ javax.crypto; \
+ javax.crypto.spec; \
+ javax.crypto.interfaces;
 
 felix.auto.start.10= reference:file:lib/bundle/org.apache.felix.bundlerepository-1.0.0.jar \
  reference:file:lib/bundle/org.apache.felix.servicebinder-0.9.0-SNAPSHOT.jar
@@ -72,6 +75,7 @@ felix.auto.start.50= \
  reference:file:sc-bundles/protocol-msn.jar \
  reference:file:sc-bundles/protocol-yahoo.jar \
  reference:file:sc-bundles/protocol-gibberish.jar \
+ reference:file:sc-bundles/protocol-ssh.jar \
  reference:file:sc-bundles/netaddr.jar \
  reference:file:sc-bundles/protocol-rss.jar \
  reference:file:sc-bundles/protocol-zeroconf.jar \
@@ -100,6 +104,7 @@ felix.auto.start.60= \
  reference:file:sc-bundles/msnaccregwizz.jar \
  reference:file:sc-bundles/yahooaccregwizz.jar \
  reference:file:sc-bundles/gibberishaccregwizz.jar \
+ reference:file:sc-bundles/sshaccregwizz.jar \
  reference:file:sc-bundles/extendedcallhistorysearch.jar \
  reference:file:sc-bundles/rssaccregwizz.jar \
  reference:file:sc-bundles/zeroconfaccregwizz.jar \
