Systray tooltip text now gets its value from the main application.properties file.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3398 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1319,6 +1319,8 @@ javax.swing.event, javax.swing.border"/>
                 prefix="resources/images/impl/gui/buttons"/>
             <zipfileset dir="${resources}/images/impl/systray"
                 prefix="resources/images/impl/systray"/>
+            <zipfileset dir="${resources}" includes="application.properties"
+                prefix="resources"/>
         </jar>
     </target>
 
