--- a/build.xml
+++ b/build.xml
@@ -1092,6 +1092,8 @@ javax.swing.event, javax.swing.border"/>
                 prefix="resources/colors"/>
             <zipfileset dir="${resources}" includes="application.properties"
                 prefix="resources"/>
+            <zipfileset dir="${resources}" includes="login.properties"
+                prefix="resources"/>
         </jar>
     </target>
 
