Added accountinfo.jar in the client run properties.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3412 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -111,6 +111,7 @@ felix.auto.start.60= \
  reference:file:sc-bundles/ircaccregwizz.jar \
  reference:file:sc-bundles/contacteventhandler.jar \
  reference:file:sc-bundles/contactinfo.jar \
+ reference:file:sc-bundles/accountinfo.jar \
  reference:file:sc-bundles/shutdown.jar
 
 # Uncomment the following lines if you want to run the architect viewer
