New property added - "isLookAndFeelDecorated", which indicates if we use the Java look and feel or the system look and feel.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3415 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/application.properties
+++ b/resources/application.properties
@@ -2,3 +2,4 @@ applicationName=SIP Communicator
 applicationWebSite=http://sip-communicator.org
 fontName=Verdana
 fontSize=12
+isLookAndFeelDecorated=false
