--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -36,6 +36,7 @@ org.osgi.framework.system.packages= org.osgi.framework; ; version=1.3.0, \
  org.jdesktop.jdic.tray; \
  org.jdesktop.jdic.desktop; \
  com.apple.eio; \
+ com.apple.cocoa.application; \
  org.xml.sax.helpers; \
  javax.crypto; \
  javax.crypto.spec; \
@@ -112,6 +113,7 @@ felix.auto.start.60= \
  reference:file:sc-bundles/contacteventhandler.jar \
  reference:file:sc-bundles/contactinfo.jar \
  reference:file:sc-bundles/accountinfo.jar \
+ reference:file:sc-bundles/chatalerter.jar \
  reference:file:sc-bundles/shutdown.jar
 
 # Uncomment the following lines if you want to run the architect viewer
