Some more flexibility added to the GUI.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3423 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/application.properties
+++ b/resources/application.properties
@@ -2,4 +2,6 @@ applicationName=SIP Communicator
 applicationWebSite=http://sip-communicator.org
 fontName=Verdana
 fontSize=12
+titleFontSize=14
 isLookAndFeelDecorated=false
+isToolBarExteneded=false
