--- a/resources/colors/colorResources.properties
+++ b/resources/colors/colorResources.properties
@@ -108,3 +108,21 @@ splashScreenTitleColor=375684
 
 # Background color for the contact list background.
 contactListBackground=FFFFFF
+
+# File menu foreground color
+fileMenuForeground=333333
+
+# Tools menu foreground color
+toolsMenuForeground=333333
+
+# View menu foreground color
+viewMenuForeground=333333
+
+# Help menu foreground color
+helpMenuForeground=333333
+
+# Logo bar background color
+logoBarBackground=FFFFFF
+
+# Main tool bar text foreground
+toolBarForeground=FFFFFF
