--- a/src/net/java/sip/communicator/impl/gui/utils/images.properties
+++ b/src/net/java/sip/communicator/impl/gui/utils/images.properties
@@ -181,3 +181,7 @@ LEAVE_ICON=resources/images/impl/gui/common/leave.png
 STATUS_SEPARATOR_ICON=resources/images/impl/gui/common/statusSeparator.png
 
 MAIN_WINDOW_BACKGROUND=resources/images/impl/gui/common/mainWindowBackground.png
+
+TOOL_BAR_BACKGROUND=resources/images/impl/gui/common/toolbarBackground.png
+MENU_BACKGROUND=resources/images/impl/gui/common/menuBackground.png
+WINDOW_TITLE_BAR=resources/images/impl/gui/common/windowTitleBarBackground.png
