Fix message resources for swing-ui bundle and update msn lib
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3428 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1095,6 +1095,10 @@ javax.swing.event, javax.swing.border"/>
                 prefix="resources"/>
             <zipfileset dir="${resources}" includes="login.properties"
                 prefix="resources"/>
+            <zipfileset dir="${resources}" includes="lookandfeel.properties"
+                prefix="resources"/>
+            <zipfileset dir="${resources}/size" includes="size.properties"
+                prefix="resources/size"/>
         </jar>
     </target>
 
