Make a configurable chat menu bar foreground color.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3457 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/colors/colorResources.properties
+++ b/resources/colors/colorResources.properties
@@ -109,8 +109,11 @@ splashScreenTitleColor=375684
 # Background color for the contact list background.
 contactListBackground=FFFFFF
 
-# File menu foreground color
+# Main menu foreground color
 mainMenuForeground=333333
+
+# Chat menu foreground color
+chatMenuBarForeground=333333
 
 # Logo bar background color
 logoBarBackground=FFFFFF
