Contact info image resources added to the plugin bundle. This should fix the IllegalArgumentException thrown at this moment.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3466 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1570,6 +1570,8 @@ javax.swing.event, javax.swing.border"/>
                 prefix="net/java/sip/communicator/plugin/contactinfo"/>
             <zipfileset dir="${resources}/languages/plugin/contactinfo"
                 prefix="resources/languages/plugin/contactinfo"/>
+            <zipfileset dir="${resources}/images/plugin/contactinfo"
+                prefix="resources/images/plugin/contactinfo"/>
         </jar>
     </target>
     
